<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonPickVibroBasic_Status_v_1_x_x" Id="{8490425f-55f7-0381-0adf-d9f63d93b381}">
    <Declaration><![CDATA[TYPE TcoTixonPickVibroBasic_Status_v_1_x_x EXTENDS TcoTixonGenericStatus : 
STRUCT
    {attribute addProperty Name "<#Separator in work position#> - i6"}
    SeparatorWorkPos : BOOL;
    {attribute addProperty Name "<#In Pick Zone#>"}
    InPickZone : BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>